Finally fix overlapping navbar while scrolling up issue on full screen

--- a/Portfolio.css
+++ b/Portfolio.css
@@ -19,6 +19,7 @@
   --font-neon-text-shadow: 0 0 10px rgba(18, 247, 255, 0.3), 0 0 20px rgba(18, 247, 255, 0.3), 0 0 30px rgba(18, 247, 255, 0.3),
     0 0 40px rgba(18, 247, 255, 0.3), 0 0 70px rgba(18, 247, 255, 0.3), 0 0 80px rgba(18, 247, 255, 0.3), 0 0 100px rgba(18, 247, 255, 0.3),
     0 0 150px rgba(18, 247, 255, 0.3);
+  --navbar-height: 102px;
 }
 
 ::-webkit-scrollbar {
@@ -40,13 +41,15 @@ body {
   background-color: var(--bg-color);
   color: var(--text-color);
   overflow-x: hidden;
-  padding-top: 101px !important;
+  padding-top: 130px;
 }
 
 html {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  scroll-behavior: auto !important;
+  scroll-padding-top: 101px !important;
 }
 
 section {
@@ -65,12 +68,14 @@ header {
   justify-content: space-between;
   width: 100%;
   padding: 20px 10%;
+  transform: none;
+  box-sizing: border-box;
 }
 
 header.sticky {
   background: var(--bg-color);
   border-bottom: 1px solid var(--secon-bg-color);
-  padding: 12px 10%;
+  padding: 15px 10%;
 }
 
 .photo {
@@ -127,7 +132,7 @@ span {
 }
 
 section {
-  padding: 10px 10%;
+  padding: 15px 10%;
 }
 
 /* Hero section ---------------------------*/
@@ -141,7 +146,7 @@ section {
   align-items: center;
   grid-gap: 0 4em;
   padding-top: 15px;
-  /* scroll-margin-top: 100px; */
+  padding-top: calc(var(--navbar-height) + 20px);
 }
 
 .home-content {
@@ -207,8 +212,6 @@ section {
   display: inline-flex;
   justify-content: space-between;
   align-items: center;
-  /* width: 400px; */
-  /* margin: 1rem 0 2rem; */
   width: 100%;
   max-width: 400px;
   margin: 1rem auto 2rem;
@@ -229,7 +232,6 @@ section {
 .btn-box {
   display: flex;
   justify-content: space-between;
-  /* width: 410px; */
   height: 45px;
   padding-right: 0.2rem;
   gap: 2rem;
@@ -354,7 +356,6 @@ section {
   border-radius: 50%;
   object-fit: cover;
   object-position: 70% center;
-  /* margin-top: 20px; */
 }
 
 .liquid-shape {
@@ -362,7 +363,6 @@ section {
   width: 100%;
   height: 100%;
   z-index: -1;
-  /* top: 10px; */
   top: 10%;
   left: 0;
 }
@@ -411,7 +411,6 @@ section {
   text-align: center;
   display: block;
   margin: auto;
-  /* margin-bottom: 1rem; */
 }
 
 .about-content h3 {
